# Google-Deepmind-Hackathon

./: Dockerfile  cloudbuild.yaml  index.html
shift-intelligence-system/linewatch-ai-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  rate_limit_state.json  requirements.txt  start_server.bat  verify_maintenance.py
shift-intelligence-system/linewatch-ai-backend/app/: __init__.py  config.py  main.py
shift-intelligence-system/linewatch-ai-backend/app/agents/: __init__.py
shift-intelligence-system/linewatch-ai-backend/app/graphs/: __init__.py  hypothesis_market.py  node_broadcasting.py  nodes.py  state.py
shift-intelligence-system/linewatch-ai-backend/app/hypothesis/: __init__.py  models.py  taxonomy.py
shift-intelligence-system/linewatch-ai-backend/app/knowledge/: __init__.py  loader.py
shift-intelligence-system/linewatch-ai-backend/app/models/: __init__.py  domain.py  reasoning_messages.py
shift-intelligence-system/linewatch-ai-backend/app/prompts/: __init__.py
shift-intelligence-system/linewatch-ai-backend/app/reasoning/: __init__.py  artifacts.py  counterfactual.py  drift.py  evolver.py
shift-intelligence-system/linewatch-ai-backend/app/services/: __init__.py  budget_manager.py  camera_coverage.py  experiment_service.py  gemini_vision.py  layout_service.py  policy_service.py  (+5 more)
shift-intelligence-system/linewatch-ai-backend/data/: agent_checkpoints.db-shm  agent_checkpoints.db-wal  experiment_metrics.csv
shift-intelligence-system/linewatch-ai-backend/scripts/: demo_hypothesis_market.py  seed_learning_data.py
(+136 files in other folders)
